# task-manager-fastapi-poc

./: docker-compose.yml  main.py  pyproject.toml  worker.py
database/: database.py  repository.py
docker/app/: Dockerfile
docker/celery/: Dockerfile
models/: task.py
schemas/: task.py
