[tool.poetry]
name = "task-manager-fastapi-poc"
version = "0.1.0"
description = ""
authors = ["Samuel Sublate <samuelsublate.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
pytest = "^7.3.0"
requests = "^2.28.2"
celery = "^5.2.7"
sqlalchemy = "^2.0.9"
python-dotenv = "^1.0.0"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
